engine/src/kernel/public/kernel_api.h

typedef struct KernelHandle KernelHandle;
/*
 * Queries runtime perception state on host/server kernels and template-derived
 * visual-debug state on pure clients when replicated actors carry an actor
 * template id with vision config.
 */
uint32_t Kernel_QueryVisionState(
    KernelHandle* kernel,
    const KernelVisionStateQuery* query,
    KernelVisionStateView* out_states,
    uint32_t max_states);
uint32_t Kernel_GetProjectileTemplates(
    KernelHandle* kernel,
    KernelProjectileTemplateDefinition* out_templates,
    uint32_t max_templates);
bool Kernel_GetActionTemplate(
    KernelHandle* kernel,
    uint32_t action_template_id,
    KernelActionTemplateDefinition* out_definition);
uint32_t Kernel_GetActorTemplates(
    KernelHandle* kernel,
    KernelActorTemplateDefinition* out_templates,
    uint32_t max_templates);
uint32_t Kernel_GetColliderTemplates(
    KernelHandle* kernel,
    KernelColliderTemplateDefinition* out_templates,
    uint32_t max_templates);
uint32_t Kernel_GetColliderBindings(
    KernelHandle* kernel,
    KernelColliderBindingDefinition* out_bindings,
    uint32_t max_bindings);
)json")
bool Kernel_ServerCreateEntity(
    KernelHandle* kernel,
    const KernelServerEntityCreateInfo* create_info,
    uint32_t* out_net_id);
bool Kernel_ServerCreateInventoryContainer(
    KernelHandle* kernel,
    uint32_t owner_entity_id,
    uint32_t slot_capacity,
    KernelInventoryContainerId* out_container_id);
bool Kernel_ServerCreateInventoryItem(
    KernelHandle* kernel,
    uint32_t item_template_id,
    uint32_t quantity,
    KernelInventoryContainerId container_id,
    KernelItemInstanceId* out_item_instance_id);
bool Kernel_ServerCreateWorldItem(
    KernelHandle* kernel,
    uint32_t item_template_id,
    uint32_t quantity,
    const KernelVec3* position,
    KernelItemInstanceId* out_item_instance_id,
    uint32_t* out_prop_entity_id);
bool Kernel_ServerSubmitGameplayRequest(
    KernelHandle* kernel,
    const KernelGameplayRequest* request);
bool Kernel_SubmitGameplayRequest(
    KernelHandle* kernel,
    const KernelGameplayRequest* request);
bool Kernel_GetItemInstance(
    KernelHandle* kernel,
    KernelItemInstanceId item_instance_id,
    KernelItemInstanceView* out_view);
bool Kernel_GetInventoryContainer(
    KernelHandle* kernel,
    KernelInventoryContainerId container_id,
    KernelInventoryContainerView* out_view);
uint32_t Kernel_CopyOwnedInventoryContainers(
    KernelHandle* kernel,
    uint32_t owner_entity_id,
    KernelInventoryContainerView* out_containers,
    uint32_t max_containers);
uint32_t Kernel_CopyInventorySlots(
    KernelHandle* kernel,
    KernelInventoryContainerId container_id,
    KernelItemInstanceView* out_items,
    uint32_t max_items);
uint32_t Kernel_PollGameplayRequestOutcomes(
    KernelHandle* kernel,
    KernelGameplayRequestOutcome* out_outcomes,
    uint32_t max_outcomes);
uint32_t Kernel_PollInventoryDeltas(
    KernelHandle* kernel,
    KernelInventoryContainerId container_id,
    KernelInventoryDelta* out_deltas,
    uint32_t max_deltas);
)json")
bool Kernel_ServerDestroyEntity(
    KernelHandle* kernel,
    uint32_t net_id,
    uint32_t reason);
)json")
bool Kernel_ServerSetEntityTransform(
    KernelHandle* kernel,
    uint32_t net_id,
    const KernelVec3* position,
    const KernelQuat* rotation);
)json")
bool Kernel_ServerSetEntityVelocity(
    KernelHandle* kernel,
    uint32_t net_id,
    const KernelVec3* velocity);
)json")
bool Kernel_ServerSetEntityState(
    KernelHandle* kernel,
    uint32_t net_id,
    uint16_t animation_state,
    uint32_t visual_flags);
)json")
bool Kernel_ServerSetEntityHealth(
    KernelHandle* kernel,
    uint32_t net_id,
    uint16_t hp);
bool Kernel_ServerSubmitEntityInput(
    KernelHandle* kernel,
    uint32_t net_id,
    const KernelPlayerInput* input);
bool Kernel_ServerSetEntityCombatState(
    KernelHandle* kernel,
    uint32_t net_id,
    const KernelCombatStateDefinition* combat_state);
bool Kernel_ServerSetEntityActorTemplate(
    KernelHandle* kernel,
    uint32_t net_id,
    uint32_t actor_template_id);
bool Kernel_ServerSetEntityVisionConfig(
    KernelHandle* kernel,
    uint32_t net_id,
    const KernelAgentVisionConfig* vision_config);
bool Kernel_ServerClearEntityVisionConfig(
    KernelHandle* kernel,
    uint32_t net_id);
bool Kernel_ServerSetEntityWeaponMechanics(
    KernelHandle* kernel,
    uint32_t net_id,
    const KernelWeaponMechanicsDefinition* weapon_mechanics);
bool Kernel_ServerClearEntityWeaponMechanics(
    KernelHandle* kernel,
    uint32_t net_id,
    uint8_t weapon_id);
bool Kernel_ServerGetEntityWeaponMechanics(
    KernelHandle* kernel,
    uint32_t net_id,
    uint8_t weapon_id,
    KernelWeaponMechanicsDefinition* out_weapon_mechanics);
bool Kernel_ServerGetHomingState(
    KernelHandle* kernel,
    uint32_t net_id,
    KernelHomingState* out_state);
bool Kernel_ServerValidateMechanicsConfig(
    const KernelWeaponMechanicsDefinition* weapon_mechanics);
bool Kernel_ServerGetEntityState(
    KernelHandle* kernel,
    uint32_t net_id,
    KernelServerEntityState* out_state);
uint32_t Kernel_ServerQueryEntities(
    KernelHandle* kernel,
    uint16_t entity_type_filter,
    KernelServerEntityState* out_states,
    uint32_t max_states);