plugins/com.network-example.kernel/Runtime/Core/KernelNative.cs


        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_QueryVisionState(
            IntPtr kernel,
            IntPtr query,
            [Out] KernelVisionStateView[] outStates,
            uint maxStates);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetProjectileTemplates(
            IntPtr kernel,
            [Out] KernelProjectileTemplateDefinition[] outTemplates,
            uint maxTemplates);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetActionTemplate(
            IntPtr kernel,
            uint actionTemplateId,
            ref KernelActionTemplateDefinition outDefinition);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetActorTemplates(
            IntPtr kernel,
            [Out] KernelActorTemplateDefinition[] outTemplates,
            uint maxTemplates);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetColliderTemplates(
            IntPtr kernel,
            [Out] KernelColliderTemplateDefinition[] outTemplates,
            uint maxTemplates);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetColliderBindings(
            IntPtr kernel,
            [Out] KernelColliderBindingDefinition[] outBindings,
            uint maxBindings);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerCreateEntity(
            IntPtr kernel,
            ref KernelServerEntityCreateInfo createInfo,
            out uint outNetId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerCreateInventoryContainer(
            IntPtr kernel,
            uint ownerEntityId,
            uint slotCapacity,
            out ulong outContainerId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerCreateInventoryItem(
            IntPtr kernel,
            uint itemTemplateId,
            uint quantity,
            ulong containerId,
            out ulong outItemInstanceId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerCreateWorldItem(
            IntPtr kernel,
            uint itemTemplateId,
            uint quantity,
            ref KernelVec3 position,
            out ulong outItemInstanceId,
            out uint outPropEntityId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSubmitGameplayRequest(
            IntPtr kernel,
            ref KernelGameplayRequest request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_SubmitGameplayRequest(
            IntPtr kernel,
            ref KernelGameplayRequest request);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetItemInstance(
            IntPtr kernel,
            ulong itemInstanceId,
            ref KernelItemInstanceView outView);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetInventoryContainer(
            IntPtr kernel,
            ulong containerId,
            ref KernelInventoryContainerView outView);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_CopyOwnedInventoryContainers(
            IntPtr kernel,
            uint ownerEntityId,
            [Out] KernelInventoryContainerView[] outContainers,
            uint maxContainers);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_CopyInventorySlots(
            IntPtr kernel,
            ulong containerId,
            [Out] KernelItemInstanceView[] outItems,
            uint maxItems);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_PollGameplayRequestOutcomes(
            IntPtr kernel,
            [Out] KernelGameplayRequestOutcome[] outOutcomes,
            uint maxOutcomes);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_PollInventoryDeltas(
            IntPtr kernel,
            ulong containerId,
            [Out] KernelInventoryDelta[] outDeltas,
            uint maxDeltas);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerDestroyEntity(
            IntPtr kernel,
            uint netId,
            uint reason);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityTransform(
            IntPtr kernel,
            uint netId,
            ref KernelVec3 position,
            ref KernelQuat rotation);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityVelocity(
            IntPtr kernel,
            uint netId,
            ref KernelVec3 velocity);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityState(
            IntPtr kernel,
            uint netId,
            ushort animationState,
            uint visualFlags);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityHealth(
            IntPtr kernel,
            uint netId,
            ushort hp);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSubmitEntityInput(
            IntPtr kernel,
            uint netId,
            ref KernelPlayerInput input);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerGetEntityState(
            IntPtr kernel,
            uint netId,
            ref KernelServerEntityState outState);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityCombatState(
            IntPtr kernel,
            uint netId,
            ref KernelCombatStateDefinition combatState);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityActorTemplate(
            IntPtr kernel,
            uint netId,
            uint actorTemplateId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityVisionConfig(
            IntPtr kernel,
            uint netId,
            ref KernelAgentVisionConfig visionConfig);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerClearEntityVisionConfig(
            IntPtr kernel,
            uint netId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerSetEntityWeaponMechanics(
            IntPtr kernel,
            uint netId,
            ref KernelWeaponMechanicsDefinition weaponMechanics);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerClearEntityWeaponMechanics(
            IntPtr kernel,
            uint netId,
            byte weaponId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerGetEntityWeaponMechanics(
            IntPtr kernel,
            uint netId,
            byte weaponId,
            ref KernelWeaponMechanicsDefinition outWeaponMechanics);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerGetHomingState(
            IntPtr kernel,
            uint netId,
            ref KernelHomingState outState);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ServerValidateMechanicsConfig(
            ref KernelWeaponMechanicsDefinition weaponMechanics);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_ServerQueryEntities(
            IntPtr kernel,
            ushort entityTypeFilter,
            [Out] KernelServerEntityState[] outStates,
            uint maxStates);
    }
}
